# rest-api-template

./: .gitignore  README.md  pyproject.toml
bench/: results.json  run_benchmark.py
src/api/: __init__.py  app.py  cli.py  config.py
src/api/db/: session.py
src/api/jobs/: scheduler.py
src/api/models/: __init__.py  tables.py
src/api/routes/: auth.py  health.py  tasks.py
src/api/services/: auth.py  security.py  tasks.py
src/api/telemetry/: otel.py
tests/: conftest.py  test_auth_routes.py  test_background_jobs.py  test_config.py  test_health.py  test_security.py  test_task_routes.py
